fixed crazy navbar on mobile

--- a/styles/sass/_header.scss
+++ b/styles/sass/_header.scss
@@ -48,6 +48,10 @@ nav ul li{
     }
 }
 
+.mobile-navbar{
+    display: none;
+}
+
 /*MAIN HEADER & HERO*/
 header{
     background: $primary-white;
