--- a/styles/sass/_main.scss
+++ b/styles/sass/_main.scss
@@ -100,10 +100,6 @@ img{
 .box-border{
     box-shadow: 0px 0px 0px 15px #0CADC0;
 }
-
-.hamburger-menu{
-    display: none;
-}
 /*MAIN CONTENT*/
 .index-main{
     background-color: $primary-bg;
