--- a/styles/style.css
+++ b/styles/style.css
@@ -282,10 +282,6 @@ img {
           box-shadow: 0px 0px 0px 15px #0CADC0;
 }
 
-.hamburger-menu {
-  display: none;
-}
-
 /*MAIN CONTENT*/
 .index-main {
   background-color: #CCEDFB;
@@ -751,6 +747,10 @@ nav ul li .active {
   border-bottom: 2px solid #0CADC0;
 }
 
+.mobile-navbar {
+  display: none;
+}
+
 /*MAIN HEADER & HERO*/
 header {
   background: #FFFFFF;
@@ -967,6 +967,60 @@ footer p {
   /*remove 👻 space*/
 }
 
+/* nav code: */
+ul.nav {
+  background: black;
+  position: fixed;
+  z-index: 10;
+  width: 30%;
+  /*note how width and right are the same values*/
+  right: -30%;
+  /* Off the screen as wide as you are */
+  top: 0;
+  height: 100%;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
+  /* magic to animate it */
+}
+
+ul.nav a {
+  border-bottom: 1px solid grey;
+  display: inline-block;
+  font-size: 1rem;
+  width: 100%;
+  padding: 20px;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+  /*we also transition the background colour here*/
+}
+
+ul.nav a:hover,
+ul.nav a:focus {
+  background: #3498db;
+}
+
+/*  When the input is checked
+  grab the next sibling nav with the + selector
+*/
+input[type="checkbox"]:checked + ul.nav {
+  right: 0;
+  /*when the checkbox is checked, put the ul.nav back to right: 0; It was at right:-30%;*/
+}
+
+input[type="checkbox"] {
+  display: none;
+  /*hide the input, we don't need to see it */
+}
+
+label[for="toggle"] {
+  /*position the menu so that it doesn't slide off screen when we open it*/
+  position: fixed;
+  top: 10px;
+  left: 10px;
+  color: white;
+  z-index: 10;
+}
+
 @media (max-width: 1285px) {
   .hero h1 {
     width: 60%;
@@ -1105,6 +1159,11 @@ fix white space on style
 fix h1 on cover*/
 /* 880 px */
 @media (max-width: 885px) {
+  .hero,
+  .blog-hero,
+  .contact-hero {
+    min-height: 40vh;
+  }
   .main-form input[type=email],
   .main-form input[type=text],
   .comment-form input[type=text],
@@ -1166,11 +1225,6 @@ testing vscode comments*/
 }
 
 @media (max-width: 660px) {
-  .hero,
-  .blog-hero,
-  .contact-hero {
-    min-height: 40vh;
-  }
   .hamburger-menu {
     display: block;
     position: fixed;
@@ -1210,12 +1264,6 @@ testing vscode comments*/
   .comment-form {
     margin-bottom: 25%;
   }
-  .comment-form input[type=text] {
-    width: 40%;
-  }
-  .comment-form input[type=email] {
-    width: 45%;
-  }
   .grid-wrap {
     -ms-grid-columns: 1fr;
         grid-template-columns: 1fr;
@@ -1229,15 +1277,18 @@ testing vscode comments*/
     margin: 0;
     padding: 30px;
   }
-  .grid-wrap input[type=text] {
-    width: 40%;
-  }
-  .grid-wrap input[type=email] {
-    width: 47%;
-  }
   .aside-contact {
     font-size: 2rem;
     text-align: center;
     margin: 2% 0;
+  }
+}
+
+@media (max-width: 585px) {
+  .nav-links {
+    display: none;
+  }
+  .mobile-navbar {
+    display: block;
   }
 }
